--- a/1. EDA.ipynb
+++ b/1. EDA.ipynb
@@ -7,19 +7,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set(style = 'white')\n",
-    "sns.set (style= 'whitegrid', color_codes = True)\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "import statsmodels.api as sm"
+    "sns.set (style= 'whitegrid', color_codes = True)"
    ]
   },
   {
@@ -1469,6 +1459,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
