--- a/4. Babson.ipynb
+++ b/4. Babson.ipynb
@@ -6,14 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import datetime as dt\n",
-    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set(style = 'white')\n",
     "sns.set (style= 'whitegrid', color_codes = True)\n",
@@ -543,6 +537,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
