--- a/7. Price sensitivity analysis.ipynb
+++ b/7. Price sensitivity analysis.ipynb
@@ -6,16 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
     "sns.set(style = 'white')\n",
-    "sns.set (style= 'whitegrid', color_codes = True)\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import classification_report"
+    "sns.set (style= 'whitegrid', color_codes = True)"
    ]
   },
   {
@@ -469,13 +464,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import classification_report\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "import statsmodels.api as sm"
    ]
   },
@@ -500,10 +490,6 @@
     "    y = df.iloc[:,0].values\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .3, random_state = 30)\n",
     "    logr.fit(X_train,y_train)\n",
-    "    y_pred_test = logr.predict(X_test)\n",
-    "    y_pred_train = logr.predict(X_train)\n",
-    "    coefs = logr.coef_\n",
-    "    intercept = logr.intercept_        \n",
     "    log_reg = sm.Logit(y_train, X_train)\n",
     "    clf = log_reg.fit()\n",
     "    column_names = list(df.columns)\n",
@@ -827,10 +813,6 @@
     "    y = df.iloc[:,0].values\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .3, random_state = 30)\n",
     "    logr.fit(X_train,y_train)\n",
-    "    y_pred_test = logr.predict(X_test)\n",
-    "    y_pred_train = logr.predict(X_train)\n",
-    "    coefs = logr.coef_\n",
-    "    intercept = logr.intercept_        \n",
     "    log_reg = sm.Logit(y_train, X_train)\n",
     "    clf = log_reg.fit()\n",
     "    column_names = list(df.columns)\n",
@@ -1047,6 +1029,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.1"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
