--- a/1. EDA.ipynb
+++ b/1. EDA.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "sns.set(style = 'white')\n",
-    "sns.set (style= 'whitegrid', color_codes = True)"
+    "sns.set(style= 'whitegrid', color_codes = True)"
    ]
   },
   {
@@ -541,7 +541,7 @@
     }
    ],
    "source": [
-    "sns.countplot( x = 'IncomeRange', data = data_income, palette = 'hls')\n",
+    "sns.countplot(x = 'IncomeRange', data = data_income, palette = 'hls')\n",
     "# There are more high and med income people in the platform compared to low income people"
    ]
   },
@@ -559,12 +559,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#  Analyze price sensitivity of each data set"
+    "## Analyze price sensitivity of each data set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### High income group:"
    ]
   },
   {
@@ -753,7 +758,6 @@
     }
    ],
    "source": [
-    "# High income group:\n",
     "High_income.head()"
    ]
   },
@@ -998,7 +1002,7 @@
    ],
    "source": [
     "# Count whether people viewed sales in visit or not, by income group \n",
-    "sns.barplot( x = 'IncomeRange', y = 'ViewedSaleInVisit',data = data_income, palette = 'hls')\n",
+    "sns.barplot(x = 'IncomeRange', y = 'ViewedSaleInVisit', data = data_income, palette = 'hls')\n",
     "# Low income people are more intested in Sales bc they have higher rate of viewing Sales \n",
     "#( high-income:16.5, Med income: 18.5, low income: 20%"
    ]
@@ -1030,7 +1034,7 @@
     }
    ],
    "source": [
-    "sns.barplot( x = 'IncomeRange', y = 'Purchased',data = data_income, palette = 'hls')\n"
+    "sns.barplot(x = 'IncomeRange', y = 'Purchased', data = data_income, palette = 'hls')\n"
    ]
   },
   {
@@ -1061,7 +1065,7 @@
    ],
    "source": [
     "# Percentage of people who clicked banner, by Income Range\n",
-    "sns.barplot( x = 'IncomeRange', y = 'ClickedBanner',data = data_income, palette = 'hls')\n",
+    "sns.barplot(x = 'IncomeRange', y = 'ClickedBanner', data = data_income, palette = 'hls')\n",
     "# Low income people are more likely to Click on the Banner (high-income:5.2%, Med income:5.5%, low income: 6% )\n",
     "# This means the offer sales and using Banner will work better with low income people"
    ]
@@ -1096,7 +1100,7 @@
    ],
    "source": [
     "# Percentage of people who clicked banner, by platform they used\n",
-    "sns.barplot( x = 'PlatformUsed', y = 'ClickedBanner',data = data, palette = 'hls')\n",
+    "sns.barplot(x = 'PlatformUsed', y = 'ClickedBanner', data = data, palette = 'hls')\n",
     "# People Click more when they are on the Web ( 5% Web vs. 4.1 % Phone)"
    ]
   },
@@ -1130,7 +1134,7 @@
    ],
    "source": [
     "# # Percentage of people who clicked banner, by platform they used\n",
-    "sns.barplot( x = 'PlatformUsed', y = 'AddedToBasket',data = data, palette = 'hls')\n",
+    "sns.barplot(x = 'PlatformUsed', y = 'AddedToBasket', data = data, palette = 'hls')\n",
     "# Among all people, people Add to Basket almost at the same rate when they are on the phone and on the web, both 14.2 %"
    ]
   },
@@ -1141,7 +1145,7 @@
    "outputs": [],
    "source": [
     "# Percentage of people who purchased, by platform they used\n",
-    "sns.barplot( x = 'PlatformUsed', y = 'Purchased',data = data, palette = 'hls')\n",
+    "sns.barplot(x = 'PlatformUsed', y = 'Purchased', data = data, palette = 'hls')\n",
     "# Among all people, people buy a lot more when they are on the Web( 3.2 %) compared to when they are on the phone (1.9%)\n",
     "# same add to basket rate, but much lower purchase rate"
    ]
@@ -1153,7 +1157,7 @@
    "outputs": [],
    "source": [
     "# # Percentage of people who purchased, by gender\n",
-    "sns.barplot( x = 'Gender', y = 'Purchased',data = data, palette = 'hls')\n",
+    "sns.barplot(x = 'Gender', y = 'Purchased', data = data, palette = 'hls')\n",
     "# Among all, people purchase more when they are Male, 0.055 vs 0.07 ( 5.5% vs 7.1%)"
    ]
   },
@@ -1189,7 +1193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.barplot( x = 'Gender', y = 'Purchased',data = phone_user , palette = 'hls')\n",
+    "sns.barplot(x = 'Gender', y = 'Purchased', data = phone_user , palette = 'hls')\n",
     "# Among all phone users, male purchase slightly more than women (0.054 vs. 0.047) or 5.4% vs 4.7%"
    ]
   },
@@ -1199,7 +1203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.barplot( x = 'IncomeRange', y = 'Purchased',data = phone_user , palette = 'hls')\n",
+    "sns.barplot(x = 'IncomeRange', y = 'Purchased', data = phone_user , palette = 'hls')\n",
     "# For phone user, low income people buy slightly a little more ( 5.8% compared to 5.2% of high or mid income)"
    ]
   },
@@ -1209,7 +1213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.barplot( x = 'Gender', y = 'ClickedBanner',data = phone_user , palette = 'hls')\n",
+    "sns.barplot(x = 'Gender', y = 'ClickedBanner', data = phone_user , palette = 'hls')\n",
     "# Among all phone users, male have the same click banner rate as women, 5%\n",
     "# Male purchase more if they are using phone, they have the same rate of clicking like women on the banner."
    ]
@@ -1220,7 +1224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sns.barplot( x = 'Gender', y = 'ClickedBanner',data = web_user , palette = 'hls')\n",
+    "#sns.barplot( x = 'Gender', y = 'ClickedBanner', data = web_user , palette = 'hls')\n",
     "# Among all web users, women click to banner more( 6.1%) while men click on banner less 5.1%\n",
     "# Male purchase more if they are using web, but they don't click Banner on the webas much as women.\n"
    ]
@@ -1241,7 +1245,7 @@
     "# Split into Male and Female group:\n",
     "data_gender = data.dropna(axis = 0, subset = ['Gender'])\n",
     "male = data_gender[data_gender['Gender'] == 'Male'].drop(['Gender'], axis = 1)\n",
-    "female = data_gender[data_gender['Gender'] == 'Female'].drop(['Gender'], axis =1)"
+    "female = data_gender[data_gender['Gender'] == 'Female'].drop(['Gender'], axis = 1)"
    ]
   },
   {
